# simpletable

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  linter.yml
docs/: Makefile  conf.py  index.rst
src/simpletable/: __init__.py
src/simpletable/dataframe/: dataframe.py  helpers.py
src/simpletable/dataframe/convert/: __init__.py  ascii.py  ecsv.py  fits.py
src/simpletable/dictdataframe/: __init__.py  convert.py  dictdataframe.py
src/simpletable/legacy/: simpletable.py
tests/: test_ascii_convert.py  test_dataframe.py  test_df_convert_ascii.py  test_dictdataframe.py  test_ecsv.py  test_fits_convert.py  test_imports.py
