[project]
name = "simpletable"
description = "A set of simple data structures for scientific data"
readme = "README.md"
version = "2.0.0"
authors = [
  {name="Morgan Fouesneau"}
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
]
keywords = ["python", "dataframe", "plotting"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=60",
            "wheel",
            ]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]                       # list of folders that contain the packages (["."] by default)
include = ["simpletable*"]            # package names should match these glob patterns (["*"] by default)
exclude = ["unittests*", "tests*"]    # exclude packages matching these glob patterns (empty by default)
namespaces = true                     # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]

ci = [
    "ruff",
    "pytest>=7",
    "pytest-doctestplus",
    "flake8",
    "codecov",
    "pytest-cov"]

docs = [
  "sphinx>=5.3",
  "sphinx-book-theme>=0.3.3",
  "sphinx-automodapi>=0.14",
  "sphinx_copybutton>=0.5",
  "sphinx-mdinclude>=0.6",
  "sphinxcontrib-htmlhelp>=2.1.0",
  "sphinxcontrib-serializinghtml>=2.0.0",
  "sphinx-tabs>=3.0",
  "myst-nb>=0.16.0",
  "sphinx-design>=0.6",
  # for syntax highlighting (https://nbsphinx.readthedocs.io/en/0.8.0/installation.html#Pygments-Lexer-for-Syntax-Highlighting)
  "IPython>=8.0",
  "matplotlib",
  "numpydoc"
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]
